tests/tables/fails/parser/unexpected_tokens3.tbl
# error: unexpected_tokens3.tbl(4,11): Expected '<Identifier>', got import
# table foo(import) = []
#           ^~~~~~
table foo(import) = []
